--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!Doctype html>
 <html lang="en">
 <head>
-<title>Atividade 09/05</title>
+<title>Site de Receitas</title>
 </head>
 <body>
-  <h1>Gerencia e Configuração de Serviços de Internet</h1>
+  
 </body>
 </html>
