--- a/index.html
+++ b/index.html
@@ -1,9 +1,66 @@
-<!Doctype html>
-<html lang="en">
+<html>
 <head>
-<title>Site de Receitas</title>
+<title="Comida"></title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="cssmyselfbook/receitas.css">
 </head>
-<body>
-  
-</body>
+
+<h2>RECEITAS</h2>
+<p>Uma das coisas que mais amo fazer é comer e
+experimentar comidas novas, sempre que posso estou
+testando novas receitas. Vou sugerir receitas que amo fazer e vou
+deixar aqui para que você possa testar em sua casa também.</p>
+
+<h3>Guacamole</h3>
+<img src="guacamole.jpg"/>
+
+<h4>Ingredientes:</h4>
+<ul>
+  <li>½ abacate</li>
+  <li>¼ de cebola bem picada</li>
+  <li>½ tomate</li>
+  <li>½ limão</li>
+  <li>1 colher de chá de pimenta calabresa</li>
+  <li>1 fio de azeite</li>
+  <li>sal a gosto</li>
+<ul/>
+
+<h4>Modo de Preparo:</h4>
+<ol>
+  <li>Em uma vasilha amasse o abacate e
+     adicione o limão e um fio de azeite.</li>
+  <li>Coloque o restante dos ingredientes e misture, experimente
+    para ver se a quantidade de sal é suficiente e está pronto!</li>
+</ol>
+
+<h3>Bolo de Milho</h3>
+<img src="bolodemilho.jpg" />
+<h4>Ingredientes</h4>
+<ul>
+  <li>2 xícaras milho cozido</li>
+  <li>3/4 xícara açúcar</li>
+  <li>1 xícara leite de coco</li>
+  <li>1 xícara de fubá</li>
+  <li>1/3 xícara de água</li>
+  <li>1/4 xícara de óleo</li>
+  <li>4 colheres de sopa farinha de trigo</li>
+  <li>2 colheres de sopa coco ralado</li>
+  <li>1 colher de chá de fermento em pó</li>
+
+<h4>Modo de Preparo</h4>
+
+<ol>
+  <li>Pré-aqueça o forno a 200 graus C.</li>
+  <li>Misture em um copo a
+    farinha de trigo com a água e deixe descansar pro 10 minutos</li>
+  <li>Enquanto isso, adicione no liquidificador
+     o restante dos ingredientes exceto o
+    coco ralado, bata até formar uma mistura homogênea.</li>
+  <li>Adicione o coco ralado depois e a mistura
+     da farinha na massa e misturar.</li>
+  <li>Unte uma forma
+    com óleo e fubá e leve ao forno de 35 a 40 minutos.</li>
+</ol>
+
+<ul/>
 </html>
